--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "config": "^3.3.10",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0"
